GEODE-3539: cleanup GfshCommand and refactor tests
* remove more try catch blocks in commands
* make GfshCommand a pure wrapper around CliUtil for easy mocking